tests/EtaX/EtaX.3.0-old.check
// exitCode: 0   def foo()       = () => ""
// exitCode: 0   def bar         = ""
// exitCode: 0   def baz()       = ""
// exitCode: 0   def zap()()     = ""
// exitCode: 0   def zup(x: Any) = ""
// exitCode: 1   val t1a: () => Any = foo                // ok, eta-expansion
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.10.scala:19:23 -
19 |  val t1a: () => Any = foo                // ok, eta-expansion
   |                       ^^^
   |                       Not found: foo

Explanation
===========
The identifier for `foo` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `foo` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t1b: () => Any = { val t = foo; t } // `()`-insert b/c no expected type
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.11.scala:20:33 -
20 |  val t1b: () => Any = { val t = foo; t } // `()`-insert b/c no expected type
   |                                 ^^^
   |                                 Not found: foo

Explanation
===========
The identifier for `foo` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `foo` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t1c: () => Any = foo _              // ok, explicit eta-expansion requested
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.12.scala:21:27 -
21 |  val t1c: () => Any = foo _              // ok, explicit eta-expansion requested
   |                       ^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: foo></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.12.scala:21:23 -
21 |  val t1c: () => Any = foo _              // ok, explicit eta-expansion requested
   |                       ^^^
   |                       Not found: foo

Explanation
===========
The identifier for `foo` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `foo` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   val t1d: Any       = foo _              // ok, explicit eta-expansion requested
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.13.scala:22:27 -
22 |  val t1d: Any       = foo _              // ok, explicit eta-expansion requested
   |                       ^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: foo></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.13.scala:22:23 -
22 |  val t1d: Any       = foo _              // ok, explicit eta-expansion requested
   |                       ^^^
   |                       Not found: foo

Explanation
===========
The identifier for `foo` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `foo` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   val t1e: Any       = foo() _            // error: _ must follow method
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.14.scala:23:29 -
23 |  val t1e: Any       = foo() _            // error: _ must follow method
   |                       ^^^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: foo></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.14.scala:23:23 -
23 |  val t1e: Any       = foo() _            // error: _ must follow method
   |                       ^^^
   |                       Not found: foo

Explanation
===========
The identifier for `foo` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `foo` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   val t2a: () => Any = bar                   // error: no eta-expansion of nullary methods
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.16.scala:25:23 -
25 |  val t2a: () => Any = bar                   // error: no eta-expansion of nullary methods
   |                       ^^^
   |                       Not found: bar

Explanation
===========
The identifier for `bar` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `bar` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t2b: Any       = { val t = bar   ; t } // ok: apply
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.17.scala:26:33 -
26 |  val t2b: Any       = { val t = bar   ; t } // ok: apply
   |                                 ^^^
   |                                 Not found: bar

Explanation
===========
The identifier for `bar` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `bar` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t2c: () => Any = bar()                 // error: bar doesn't take arguments, so expanded to bar.apply(), which misses an argument
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.18.scala:27:23 -
27 |  val t2c: () => Any = bar()                 // error: bar doesn't take arguments, so expanded to bar.apply(), which misses an argument
   |                       ^^^
   |                       Not found: bar

Explanation
===========
The identifier for `bar` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `bar` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t2d: () => Any = bar _                 // ok
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.19.scala:28:27 -
28 |  val t2d: () => Any = bar _                 // ok
   |                       ^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: bar></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.19.scala:28:23 -
28 |  val t2d: () => Any = bar _                 // ok
   |                       ^^^
   |                       Not found: bar

Explanation
===========
The identifier for `bar` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `bar` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   val t2e: () => Any = { val t = bar _ ; t } // ?/ok
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.20.scala:29:37 -
29 |  val t2e: () => Any = { val t = bar _ ; t } // ?/ok
   |                                 ^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: bar></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.20.scala:29:33 -
29 |  val t2e: () => Any = { val t = bar _ ; t } // ?/ok
   |                                 ^^^
   |                                 Not found: bar

Explanation
===========
The identifier for `bar` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `bar` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   val t2f: Any       = bar _                 // ok
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.21.scala:30:27 -
30 |  val t2f: Any       = bar _                 // ok
   |                       ^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: bar></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.21.scala:30:23 -
30 |  val t2f: Any       = bar _                 // ok
   |                       ^^^
   |                       Not found: bar

Explanation
===========
The identifier for `bar` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `bar` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   val t2g: Any       = bar() _               // error: not enough arguments for method apply
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.22.scala:31:29 -
31 |  val t2g: Any       = bar() _               // error: not enough arguments for method apply
   |                       ^^^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: bar></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.22.scala:31:23 -
31 |  val t2g: Any       = bar() _               // error: not enough arguments for method apply
   |                       ^^^
   |                       Not found: bar

Explanation
===========
The identifier for `bar` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `bar` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   val t3a: () => Any = baz                   // eta-expansion, but lint warning
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.24.scala:33:23 -
33 |  val t3a: () => Any = baz                   // eta-expansion, but lint warning
   |                       ^^^
   |                       Not found: baz

Explanation
===========
The identifier for `baz` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `baz` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t2Sam0S: Sam0S = baz                   // err??/warn/succ: -Xlint:eta-zero + -Xlint:eta-sam, no eta-expansion w/o 2.14?
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.25.scala:34:23 -
34 |  val t2Sam0S: Sam0S = baz                   // err??/warn/succ: -Xlint:eta-zero + -Xlint:eta-sam, no eta-expansion w/o 2.14?
   |                       ^^^
   |                       Not found: baz

Explanation
===========
The identifier for `baz` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `baz` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t2Sam0J: Sam0J = baz                   // err??/warn/succ: -Xlint:eta-zero, no eta-expansion w/o 2.14?
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.26.scala:35:23 -
35 |  val t2Sam0J: Sam0J = baz                   // err??/warn/succ: -Xlint:eta-zero, no eta-expansion w/o 2.14?
   |                       ^^^
   |                       Not found: baz

Explanation
===========
The identifier for `baz` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `baz` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t3b: Any       = { val t = baz   ; t } // ?/succ/warn: apply, ()-insertion
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.27.scala:36:33 -
36 |  val t3b: Any       = { val t = baz   ; t } // ?/succ/warn: apply, ()-insertion
   |                                 ^^^
   |                                 Not found: baz

Explanation
===========
The identifier for `baz` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `baz` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t3a: () => Any = baz _                 // ok
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.28.scala:37:27 -
37 |  val t3a: () => Any = baz _                 // ok
   |                       ^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: baz></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.28.scala:37:23 -
37 |  val t3a: () => Any = baz _                 // ok
   |                       ^^^
   |                       Not found: baz

Explanation
===========
The identifier for `baz` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `baz` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   val t3c: () => Any = { val t = baz _ ; t } // ok?/ok
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.29.scala:38:37 -
38 |  val t3c: () => Any = { val t = baz _ ; t } // ok?/ok
   |                                 ^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: baz></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.29.scala:38:33 -
38 |  val t3c: () => Any = { val t = baz _ ; t } // ok?/ok
   |                                 ^^^
   |                                 Not found: baz

Explanation
===========
The identifier for `baz` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `baz` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   val t3a: Any       = baz _                 // ok
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.30.scala:39:27 -
39 |  val t3a: Any       = baz _                 // ok
   |                       ^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: baz></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.30.scala:39:23 -
39 |  val t3a: Any       = baz _                 // ok
   |                       ^^^
   |                       Not found: baz

Explanation
===========
The identifier for `baz` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `baz` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   val t3d: Any       = baz() _               // error: _ must follow method
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.31.scala:40:29 -
40 |  val t3d: Any       = baz() _               // error: _ must follow method
   |                       ^^^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: baz></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.31.scala:40:23 -
40 |  val t3d: Any       = baz() _               // error: _ must follow method
   |                       ^^^
   |                       Not found: baz

Explanation
===========
The identifier for `baz` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `baz` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   val t4a: () => Any = zap     // eta-expansion, but lint warning
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.33.scala:42:23 -
42 |  val t4a: () => Any = zap     // eta-expansion, but lint warning
   |                       ^^^
   |                       Not found: zap

Explanation
===========
The identifier for `zap` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `zap` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t4b: () => Any = zap()   // ditto
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.34.scala:43:23 -
43 |  val t4b: () => Any = zap()   // ditto
   |                       ^^^
   |                       Not found: zap

Explanation
===========
The identifier for `zap` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `zap` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t4c: () => Any = zap _   // ok
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.35.scala:44:27 -
44 |  val t4c: () => Any = zap _   // ok
   |                       ^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: zap></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.35.scala:44:23 -
44 |  val t4c: () => Any = zap _   // ok
   |                       ^^^
   |                       Not found: zap

Explanation
===========
The identifier for `zap` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `zap` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   val t4d: () => Any = zap() _ // ok
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.36.scala:45:29 -
45 |  val t4d: () => Any = zap() _ // ok
   |                       ^^^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: zap></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.36.scala:45:23 -
45 |  val t4d: () => Any = zap() _ // ok
   |                       ^^^
   |                       Not found: zap

Explanation
===========
The identifier for `zap` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `zap` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   val t5b: Any => Any = zup                   // ok
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.38.scala:47:24 -
47 |  val t5b: Any => Any = zup                   // ok
   |                        ^^^
   |                        Not found: zup

Explanation
===========
The identifier for `zup` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `zup` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t5c: Sam1S      = zup                   // ok, but warning
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.39.scala:48:24 -
48 |  val t5c: Sam1S      = zup                   // ok, but warning
   |                        ^^^
   |                        Not found: zup

Explanation
===========
The identifier for `zup` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `zup` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t5d: Sam1J      = zup                   // ok
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.40.scala:49:24 -
49 |  val t5d: Sam1J      = zup                   // ok
   |                        ^^^
   |                        Not found: zup

Explanation
===========
The identifier for `zup` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `zup` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t5e: Any => Any = { val t = zup   ; t } // error in 2.13, eta-expansion in 2.14
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.41.scala:50:34 -
50 |  val t5e: Any => Any = { val t = zup   ; t } // error in 2.13, eta-expansion in 2.14
   |                                  ^^^
   |                                  Not found: zup

Explanation
===========
The identifier for `zup` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `zup` or its declaration has either been
misspelt or if an import is missing.

1 error found
// exitCode: 1   val t5f: Any => Any = { val t = zup _ ; t } // ?/ok
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.42.scala:51:38 -
51 |  val t5f: Any => Any = { val t = zup _ ; t } // ?/ok
   |                                  ^^^^^
   |Only function types can be followed by _ but the current expression has type <nonsensical><error Not found: zup></nonsensical>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.42.scala:51:34 -
51 |  val t5f: Any => Any = { val t = zup _ ; t } // ?/ok
   |                                  ^^^
   |                                  Not found: zup

Explanation
===========
The identifier for `zup` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `zup` or its declaration has either been
misspelt or if an import is missing.

1 warning found
1 error found
// exitCode: 1   new A().boom // ?/?/err: apply, ()-insertion
-- [E100] Syntax Migration Warning: target/tests/EtaX/EtaX/EtaX.44.scala:53:10 -
53 |  new A().boom // ?/?/err: apply, ()-insertion
   |  ^^^^^^^^^^^^
   |  method boom must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

-- [E042] Usage Error: target/tests/EtaX/EtaX/EtaX.44.scala:53:6 ---------------
53 |  new A().boom // ?/?/err: apply, ()-insertion
   |      ^
   |      A is a trait; it cannot be instantiated

Explanation
===========
Abstract classes and traits need to be extended by a concrete class or object
to make their functionality accessible.

You may want to create an anonymous class extending A with
  class A { }

or add a companion object with
  object A extends A

You need to implement any abstract members in both cases.


1 warning found
1 error found
// exitCode: 1   val ys = { val t = scala.collection.mutable.Map(1 -> "foo"); xs.clone } // ?/?/ok
-- [E006] Unbound Identifier Error: target/tests/EtaX/EtaX/EtaX.46.scala:55:63 -
55 |  val ys = { val t = scala.collection.mutable.Map(1 -> "foo"); xs.clone } // ?/?/ok
   |                                                               ^^
   |                                                           Not found: xs

Explanation
===========
The identifier for `xs` is not bound, that is,
no declaration for this identifier can be found.
That can happen, for example, if `xs` or its declaration has either been
misspelt or if an import is missing.

1 error found
